corpus/cpp/template/case-01/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.cpp:4:14: error: [template] no matching function for call to 'takes_same(int, double)'
raw : no matching function for call to 'takes_same(int, double)'
| src/main.cpp:4:14
| int main() { takes_same(1, 2.0); }
|              ^
while instantiating:
  - src/main.cpp:2:6 candidate 1: 'template<class T> void takes_same(T, T)'
  - src/main.cpp:4:14 deduced conflicting types for parameter 'T' ('int' and 'double')
omitted 3 internal template frames
details: --formed-explain | raw: --formed-raw